# frenet_trajectory_planner

./: CMakeLists.txt  LICENSE  README.md  package.xml
demos/: CMakeLists.txt  generate_all_possible_trajectories_demo.cpp  plan_trajectory_demo.cpp  select_best_trajectory_demo.cpp
frenet_trajectory_planner/: CMakeLists.txt  README.md
frenet_trajectory_planner/demos/: select_best_trajectory_demo.cpp
frenet_trajectory_planner/include/frenet_trajectory_planner/: frenet_trajectory_planner.hpp  quartic_trajectory_planner.hpp  quintic_trajectory_planner.hpp
frenet_trajectory_planner/include/frenet_trajectory_planner/costs/: lateral_distance_cost.hpp  longtitutal_velocity_cost.hpp
frenet_trajectory_planner/include/frenet_trajectory_planner/policies/: base_policy.hpp
frenet_trajectory_planner/src/: frenet_frame_converter.cpp  frenet_trajectory_generator.cpp  frenet_trajectory_planner.cpp
frenet_trajectory_planner/src/conversion_adapters/: base_adapter.cpp  line_adapter.cpp
frenet_trajectory_planner/src/policies/: acceleration_policy.cpp
frenet_trajectory_planner/test/: frenet_trajectory_generator_test.cpp  quintic_trajectory_planner_test.cpp
ilqr_trajectory_tracker/: CMakeLists.txt  README.md  package.xml
ilqr_trajectory_tracker/demos/: CMakeLists.txt  ilqr_optimizer_demo.cpp
ilqr_trajectory_tracker/include/ilqr_trajectory_tracker/: ilqr_optimizer.hpp
ilqr_trajectory_tracker/include/ilqr_trajectory_tracker/models/: base_model.hpp  diff_robot_model.hpp
ilqr_trajectory_tracker/src/: ilqr_optimizer.cpp  ilqr_trajectory_tracker.cpp
ilqr_trajectory_tracker/src/models/: ackermann_car_model.cpp  base_model.cpp  diff_robot_model.cpp
ilqr_trajectory_tracker/test/: CMakeLists.txt  ilqr_optimizer_test.cpp
ilqr_trajectory_tracker/test/models/: diff_drive_robot_model_test.cpp
include/frenet_trajectory_planner/: frenet_frame_converter.hpp  frenet_trajectory_generator.hpp  frenet_trajectory_planner.hpp  frenet_trajectory_selector.hpp  quartic_trajectory_planner.hpp  quintic_trajectory_planner.hpp  type_definitions.hpp
include/frenet_trajectory_planner/conversion_adapters/: base_adapter.hpp  line_adapter.hpp
include/frenet_trajectory_planner/costs/: base_cost.hpp  distance_cost.hpp
include/frenet_trajectory_planner/policies/: acceleration_policy.hpp  base_policy.hpp
src/: frenet_frame_converter.cpp  frenet_trajectory_generator.cpp  frenet_trajectory_planner.cpp  frenet_trajectory_selector.cpp  quartic_trajectory_planner.cpp  quintic_trajectory_planner.cpp
src/policies/: acceleration_policy.cpp
test/: CMakeLists.txt  acceleration_policy_test.cpp  frenet_frame_converter_test.cpp  frenet_trajectory_generator_test.cpp  frenet_trajectory_selector_test.cpp  quartic_trajectory_planner_test.cpp  quintic_trajectory_planner_test.cpp
test/conversion_adapters/: line_adapter_test.cpp
